<resources>
    <string name="app_name">Stockvest</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="graph_image">Graph Image</string>
    <string name="trending">Trending</string>
    <string name="top_gainer">Top Gainer</string>
    <string name="top_loser">Top Loser</string>
    <string name="most_active">Most Active</string>
    <string name="stock_image_logo">Stock Image Logo</string>
    <string name="open">Open</string>
    <string name="lot">Lot</string>
    <string name="high">High</string>
    <string name="value">Value</string>
    <string name="low">Low</string>
    <string name="freq">Freq</string>
    <string name="stockvest_logo">Stockvest Logo</string>
    <string name="alarm">Alarm</string>
    <string name="analysis">Analysis</string>
    <string name="news">News</string>
    <string name="orderbook">Orderbook</string>
    <string name="key_statistics">Key Statistics</string>
    <string name="company_profile">Company Profile</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_time">Order Time</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="investment">Investment</string>
    <string name="cancel_buttton">Cancel Buttton</string>
    <string name="delete">DELETE</string>
    <string name="net_income">Net Income</string>
    <string name="valuation">Valuation</string>
    <string name="solvency">Solvency</string>
    <string name="dividend">Dividend</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="watchlist">Watchlist</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="amend">Amend</string>
</resources>