<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigationFavourites"
        android:icon="@drawable/menu_favorites"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigationStatistics"
        android:icon="@drawable/menu_statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigationTransactions"
        android:icon="@drawable/menu_transaction"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/menu_profile"
        android:title="@string/title_profile" />

</menu>