<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationHome">

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.simform.stockvest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigationFavourites"
        android:name="com.simform.stockvest.ui.favorites.FavoritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigationStatistics"
        android:name="com.simform.stockvest.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigationTransactions"
        android:name="com.simform.stockvest.ui.transaction.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction"/>

    <fragment
        android:id="@+id/navigationProfile"
        android:name="com.simform.stockvest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>